# RV32IC-Simulator

./: Bonus.cpp  CMakeLists.txt  README.md  local_history.patch  main.cpp  t22.asm
Test files/: t0.asm  t1.asm  t3.asm
